# CMIPLD

./: .copier-answers.yml  .gitignore  COMPLETION_SUMMARY.md  DONE.md  LINK_NORMALIZATION.md  MANIFEST.in  README.md  copier.yml  mkdocs-requirements.txt.bak  mkdocs.yml  mkdocs.yml.bak  pyproject.toml  setup.py  test_links.py  test_src_data.py  test_template.py  tmp_method.py  verify_cleanup.py
 notebooks/: LoadingData.ipynb
.github/ISSUE_SCRIPT/: id_generator.py
.github/actions/check-contexts/: action.yml
.github/actions/cmipld/: action.yml
.github/workflows/: auto-assign-issues.yml.bak  ci.yml  graph.yml  linkcheck.yml  pip_install.yml  publish2pypi.yml  static.yml  summarise.yml  validate.yml  validate_json.yml  valudate_json.yml
actions/: README  README.md  pages.yml
actions/archive-version/: action.yml
actions/build-docs/: README.md  action.yml
actions/build-mkdocs/: README.md  action.yml
actions/check-tempgrid-duplicate/: action.yml
actions/cmipld/: action.yml
actions/fetch_branch_path/: action.yml
actions/find-all-directories/: README.md  action.yml
actions/find-updated-directories/: README.md  action.yml
actions/get_dir/: action.yml
actions/mkdocs/: action.yml
actions/new-issue/: action.yml
actions/pages/: action.yml
actions/publish2pages/: action.yml
actions/pushpr/: action.yml
actions/pypi/: action.yml
archive/: test_template_update.py
cmipld/: __init__.py  cmipld.py  file_io.py  form_design.md  gettest.py  locations.py  prefix_mappings.json  version.py
cmipld/browse/: __main__.py  class_depends.py  class_embedded.py  class_linknav.py  class_loader.py  class_processurl.py  contexts.py  interactive.py  read.py
cmipld/citations/: fetch_lnll.py  init_fetch_lnll.sh
cmipld/cli/: __init__.py  contributor.py  dev.py  shell.py  workflow.py
cmipld/copier/: __init__.py  __main__.py
cmipld/cvs/: CV.json  CV_v2_with_links.json  cmip6plus.py  generate.py  parse.py  review.ipynb
cmipld/frame_ld/: __init__.py
cmipld/generate/: GRAPHIFY.md  __init__.py  ci.py  clean_action_logs.py  commit_author.py  create_readme.py  elasticmipcvs.py  generate_summary.py  get_contributors.py  graphify.py  linkchecker.py  new_issue.py  repo keygen .sh  review_report.py  rss.py  template_generator.py  template_generator_pptx.py  template_generator_word.py  template_generator_xlsx.py  template_generator_xlsx_fixed.py  template_generator_xlsx_simple.py  template_prefill.py  template_utils.py  update_all.py  update_ctx.py  update_new.py  validate_json.py
cmipld/generate/legacy/: issue_template.py  makegraph.py  new_element_from_issue.py  reframe.py  rewritetype.py  test.json  update_new copy.py  update_new.py
cmipld/graph/: __init__.py  context.py
cmipld/graph/serve/: Untitled-1
cmipld/legacy/: file_io.py
cmipld/legacy/cli/: pyld.py
cmipld/legacy/frame_ld/: __init__.py
cmipld/legacy/graph/: __init__.py
cmipld/legacy/scratch/: update_content.ipynb
cmipld/schema/: __init__.py  issue_template.py  update_schema.py
cmipld/scripts/development/: coauthor_file
cmipld/scripts/directory-utilities/: ld2graph
cmipld/tests/: __init__.py  inputs.py
cmipld/tests/cvs/: conftest.py  cvfile_test.py
cmipld/tests/jsonld/: __init__.py
cmipld/tests/legacy/: schema.py
cmipld/utils/: __init__.py  checksum.py  classfn.py  crs.py  esgvoc.py  id_generation.py  io.py  json.py  jsontools.py  ldparse.py  offline.py  server.py  similarity_fingerprint.py  styling.py  texttools.py  urltools.py  validate_json.py  validate_json_legacy.py  write06.py
cmipld/utils/extract/: links.py  read.py
cmipld/utils/git/: FILE="".sh  FILE_CHANGE_TRACKING.md  __init__.py  actions.py  add.py  coauthors.py  functions.py  gh_utils.py  git_branch_management.py  git_commit_management.py  git_core.py  git_issues.py  git_pull_request.py  git_repo_metadata.py  git_validation_utils.py  repo_info.py  tree.py
cmipld/utils/logging/: unique.py
cmipld/utils/organisation/: __init__.py  missing_ror.json  search.ipynb  upgrade.py
cmipld/utils/server_tools/: loader.py  monkeypatch_requests.py  offline.py  push_pr_action.yml  push_pr_with_cleanup.yml  pyld_requests.py  server.py
cmipld/utils/similarity/: __init__.py  analysis.py  dev_report_builder.ipynb  fingerprint.py  folder_similarity.py  graph_loader.py  link_analyzer.py  pydantic_validator.py  rdf.py  report_builder.py  text_similarity.py
cmipld/utils/validate_json/: COMMIT_TROUBLESHOOTING.md  README.md  __init__.py  __main__.py  cli.py  context_manager.py  example_config.json  example_context.jsonld  git_integration.py  reporting.py  update_files.py  validator.py
copier/: README.md
copier/documentation/: .copier-answers-documentation.yml.jinja  README.md  copier.yml  demo-answers.yml
copier/documentation/del/: footer.html.jinja
copier/documentation/docs/: index.md.jinja  links.yml.jinja
copier/issue_generator/: copier.yml
copier/mkdocs/: NAV_FILES_TROUBLESHOOTING.md  README.md  SCRIPTS_DOCUMENTATION.md  STATIC_FILES_ENHANCED.md  USAGE.md  auto-setup.py  cmds.py  copier.yml  diagnose_src_data.py  setup-links.py  test_src_data_processing.py
copier/mkdocs/REMOVED/: DS_Store_1  DS_Store_2  DS_Store_3  DS_Store_4  DS_Store_5  DS_Store_6  DS_Store_7  (+4 more)
copier/workflows/: .copier-answers-workflows.yml.jinja  copier.yml
del/: README.md
del/cmipld.egg-info 13.02.07/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
del/old_git_integration/: git_integration.py.backup
del/scripts/: analyze_graph_links.py
docs/: build-mkdocs-action.md
docs/technical/: styling.md
legacy/: CMIP6Plus_organisations.ipynb
legacy/dev/: del.ipynb  issues.ipynb  iterative.ipynb  servertest.py
notebooks/: all_available.ipynb
scripts/: analyze_links.py  issue_similarity.py  process_src_data_fixed.py.bak
scripts/development/: coauthor_file  countkeys.sh  label2validationkey.sh  labelrename.sh  libdeps.py  nodsstore  urlpath_gitpwd.sh
scripts/jsonld-util/: nameandsort.sh
src-data/example-data/: README.md  context.txt  data.json
static/404README/: 404_restful.js
static/rss/: index.html
static/viewer/: viewer.js
(+125 files in other folders)
