[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cmipld"
dynamic = ["version"]  # Let setuptools_scm handle versioning
authors = [
  { name="Daniel Ellis" }
]
description = "A tool for managing CMIP Linked Data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pyld",
    "jmespath",
    "pydantic",
    "p_tqdm",
    "rich",
    "tqdm"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/WCRP-CMIP/CMIP-LD"
Issues = "https://github.com/WCRP-CMIP/CMIP-LD/issues"
Documentation = "https://wiki.mipcvs.dev"
Notebooks = 'https://colab.research.google.com/github/WCRP-CMIP/CMIP-LD/blob/main/notebooks/intro.ipynb'

[project.scripts]
# Python entry points
cmipld = "cmipld.browse.__main__:main"
update_ctx = "cmipld.generate.update_ctx:main"
update_all = "cmipld.generate.update_all:main"
new_issue = "cmipld.generate.new_issue:main"
generate_summary = "cmipld.generate.generate_summary:main"
update_readme = "cmipld.generate.create_readme:main"
validate_json = "cmipld.utils.validate_json:main"
create_readme = "cmipld.generate.create_readme:main"

# Shell script wrappers
ld2graph = "cmipld.utils.shell_wrappers:ld2graph_main"
validjsonld = "cmipld.utils.shell_wrappers:validjsonld_main"
dev = "cmipld.utils.shell_wrappers:dev_main"
rmbak = "cmipld.utils.shell_wrappers:rmbak_main"
rmgraph = "cmipld.utils.shell_wrappers:rmgraph_main"
coauthor_file = "cmipld.utils.shell_wrappers:coauthor_file_main"

[tool.setuptools]
packages = ["cmipld"]
include-package-data = true

[tool.setuptools.package-data]
cmipld = [
    "scripts/*/*",
    "scripts/*/*/*",
    "prefix_mappings.json"
]

[tool.setuptools_scm]
write_to = "cmipld/version.py"
