[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cmipld"
dynamic = ["version"]  # Let setuptools_scm handle versioning
authors = [
  { name="Daniel Ellis" }
]
description = "A tool for managing CMIP Linked Data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "jmespath",
    "pydantic",
    "p_tqdm",
    "rich",
    "tqdm",
    "pyyaml",
    "rdflib>=6.0.0",
    "jsonld-recursive @ git+https://github.com/wolfiex/jsonld-recursive"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
copier  = ["copier>=9.0.0"]
esgvoc  = ["esgvoc @ git+https://github.com/ESGF/esgf-vocab.git@main"]
embeddings = ["fastembed"]

[project.urls]
Homepage = "https://github.com/WCRP-CMIP/CMIP-LD"
Issues = "https://github.com/WCRP-CMIP/CMIP-LD/issues"
Documentation = "https://wiki.mipcvs.dev"
Notebooks = "https://colab.research.google.com/github/WCRP-CMIP/CMIP-LD/blob/main/notebooks/intro.ipynb"

[project.scripts]
# Python entry points only
cmipld = "cmipld.browse.__main__:main"                    # Main CMIP-LD browser interface

update_ctx = "cmipld.generate.update_ctx:main"           # Update JSON-LD context files
update_project = "cmipld.generate.update_ctx:project"           # Update JSON-LD context files
update_all = "cmipld.generate.update_all:main"           # Run full update process (contexts + graphs)
new_issue = "cmipld.generate.new_issue:main"             # Generate new GitHub issue
generate_summary = "cmipld.generate.generate_summary:main" # Generate repository summary
update_readme = "cmipld.generate.create_readme:main"     # Update README files
validate_json = "cmipld.utils.validate_json.cli:main"        # Validate JSON-LD files
create_readme = "cmipld.generate.create_readme:main"     # Create README files

commit_author = "cmipld.generate.commit_author:main" # commit a file with another author.
upgrade_ror = "cmipld.utils.organisation.upgrade:main"

ci = "cmipld.generate.ci:main" # check files
linkcheck = "cmipld.generate.linkchecker:main"
template_generate = "cmipld.generate.template_generator:main" # Generate GitHub issue templates from CSV/Python pairs
template_update = "cmipld.generate.template_prefill:main"
rss = "cmipld.generate.rss:main"  # Generate RSS feed for commits and releases
get_contributors = "cmipld.generate.get_contributors:main"  # Generate contributors tracking and HTML page
cmipcopier = "cmipld.copier:main"  # Install/update copier templates
graphify = "cmipld.generate.graphify:main"  # Generate JSON-LD graphs for vocabulary directories
cmipworkflow = "cmipld.cli.workflow:main"  # Run GitHub Actions workflows
cmip-contributor = "cmipld.cli.contributor:main"  # Get/assign file contributors by GitHub handle
dev = "cmipld.cli.dev:main"  # Quick git development workflow: pull, add -A, commit 'development', push
ld2graph = "cmipld.cli.shell:ld2graph"
validjsonld = "cmipld.cli.shell:validjsonld"
rmbak = "cmipld.cli.shell:rmbak"
rmgraph = "cmipld.cli.shell:rmgraph"
coauthor_file = "cmipld.cli.shell:coauthor_file"
cmipld-help = "cmipld.cli.shell:cmipld_help"

[tool.setuptools]
find = {}
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["*.egg-info", "build", "dist"]

[tool.setuptools.package-data]
cmipld = [
    "prefix_mappings.json",
    "bin/*",
]

[tool.setuptools_scm]
write_to = "cmipld/version.py"
